tests/paczka1/small_fuzzy/38001254.err
Error in line 3: nO7IaG4q A980 56,3
Error in line 5: nO7IaG4q A889 76,8
Error in line 8: PbWj A889 62,3
